<resources>
    <string name="app_name">iMage M6 APP</string>
    <string name="btnUpdate">Update</string>
    <string name="btnCon">BT Con</string>
    <string name="btnPair">Pair</string>
    <string name="btnRead">Read</string>
    <string name="btnWrite">Write</string>
    <string name="btnDfu">DFU</string>
    <string name="btnRfTest">RF Test</string>
    <string name="btnDiscovery">Discovery</string>
    <string name="btnHfp0">HFP0</string>
    <string name="btnHfp1">HFP1</string>
    <string name="btnHfp2">HFP2</string>
    <string name="btnHfp3">HFP3</string>
    <string name="btnHfp4">HFP4</string>
    <string name="btnHfp5">HFP5</string>
    <string name="btnSrc">SRC</string>
    <string name="btnAg0">AG0</string>
    <string name="btnAg1">AG1</string>
    <string name="btnAg2">AG2</string>
    <string name="txvConStaTitle">Device Status</string>
    <string name="txvRecyclerTitle">non activity</string>
    <string name="txvFeatureTitle">Feature Set</string>
    <string name="txvVolumeTitle">Volume Set</string>
    <string name="txvRfTestTitle">RF Test</string>
    <string name="txvStaConnected">Connected</string>
    <string name="txvStaConnecting">Connecting</string>
    <string name="txvStaDiscon">Disconnect</string>
    <string name="txvStaEnable">Enable</string>
    <string name="txvStaDisable">Disable</string>
    <string name="txvStaDiscovey">Find Device</string>
    <string name="txvStaDiscoveryStart">Discovery Device</string>
    <string name="txvStaDiscoveryEnd">Discovered Device</string>
    <string name="txvPairTitle">non activity</string>
    <string name="txvStaPaired">List Paired Device</string>
    <string name="txvDevSrc">SRC</string>
    <string name="txvDevAllAg">All AG</string>
    <string name="txvDevAllHfp">"All Speaker  "</string>
    <string name="txvDevA6">A6</string>
    <string name="txvDevA7">A7</string>
    <string name="txvModeWired">Wired</string>
    <string name="txvModeUsb">USB</string>
    <string name="txvModeBt">BT</string>
    <string name="txvModeVcs">"Mutli-Speaker  "</string>
    <string name="txvFeature0">Fixed Device</string>
    <string name="txvFeature1">Clear Mute</string>
    <string name="txvFeature2">2</string>
    <string name="txvFeature3">3</string>
    <string name="txvFeature4">Disable EC</string>
    <string name="txvFeature5">Enable I2S Output</string>
    <string name="txvFeature6">Enable Loop Back</string>
    <string name="txvFeature7">Enable Music Mode</string>
    <string name="txvFeature8">Disable Filter BDA</string>
    <string name="txvFeature9">Enable I2S Input</string>
    <string name="txvFeatureA">10</string>
    <string name="txvFeatureB">11</string>
    <string name="txvFeatureC">12</string>
    <string name="txvFeatureD">Enable BLE</string>
    <string name="txvFeatureE">14</string>
    <string name="txvFeatureF">Enable Expan Function</string>
    <string name="txvFilterBda">Filter BDA:</string>
    <string name="txvDecadeSpkrHfp">MIC Level</string>
    <string name="txvDecadeSpkrAv">MIC Level</string>
    <string name="txvVolumeSrc">Source Device Volume Set</string>
    <string name="txvVolumeAg">HFP Device Volume Set</string>
    <string name="txvTalkMode">Talk Mode</string>
    <string name="txvMusicMode">Music Mode</string>
    <string name="title_activity_message_edit">MessageEdit</string>
    <string name="txvAudioParaTitleA6">A6 Audio Parameter Set</string>
    <string name="txvAudioParaTitleA7">A7 Audio Parameter Set</string>
    <string name="txvDevPair">Pair Device</string>
    <string name="txvDevMsg">Device Message</string>
    <string name="txvAudioParameter0A6">audio parameter 0(A6 normal)</string>
    <string name="txvAudioParameter1A6">audio parameter 1(A6 normal AGC)</string>
    <string name="txvAudioParameter2A6">audio parameter 2(A6 Room Kit)</string>
    <string name="txvAudioParameter3A6">audio parameter 3(A6)</string>
    <string name="txvAudioParameter4A6">audio parameter 4(A6)</string>
    <string name="txvAudioParameter5A6">audio parameter 5</string>
    <string name="txvAudioParameter6A6">audio parameter 6</string>
    <string name="txvAudioParameter7A6">audio parameter 7</string>
    <string name="txvAudioParameter8A6">audio parameter 8</string>
    <string name="txvAudioParameter9A6">audio parameter 9</string>
    <string name="txvAudioParameter10A6">audio parameter 10</string>
    <string name="txvAudioParameter11A6">audio parameter 11</string>
    <string name="txvAudioParameter12A6">audio parameter 12</string>
    <string name="txvAudioParameter13A6">audio parameter 13</string>
    <string name="txvAudioParameter14A6">audio parameter 14</string>
    <string name="txvAudioParameter15A6">audio parameter 15</string>
    <string name="txvAudioParameter0A7">audio parameter 0(A7 normal)</string>
    <string name="txvAudioParameter1A7">audio parameter 1(A7 normal AGC)</string>
    <string name="txvAudioParameter2A7">audio parameter 2(A7 Room Kit)</string>
    <string name="txvAudioParameter3A7">audio parameter 3(A7)</string>
    <string name="txvAudioParameter4A7">audio parameter 4(A7)</string>
    <string name="txvAudioParameter5A7">audio parameter 5</string>
    <string name="txvAudioParameter6A7">audio parameter 6</string>
    <string name="txvAudioParameter7A7">audio parameter 7</string>
    <string name="txvAudioParameter8A7">audio parameter 8</string>
    <string name="txvAudioParameter9A7">audio parameter 9</string>
    <string name="txvAudioParameter10A7">audio parameter 10</string>
    <string name="txvAudioParameter11A7">audio parameter 11</string>
    <string name="txvAudioParameter12A7">audio parameter 12</string>
    <string name="txvAudioParameter13A7">audio parameter 13</string>
    <string name="txvAudioParameter14A7">audio parameter 14</string>
    <string name="txvAudioParameter15A7">audio parameter 15</string>
    <string name="txvUpdateTime">60</string>
    <string name="txvRfTestTime">test time</string>
    <string name="txvFreqHi">2480 MHz</string>
    <string name="txvFreqMid">2441 MHz</string>
    <string name="txvFreqLo">2402 MHz</string>
    <string-array name="txvDevName">
        <item name="0">source</item>
        <item name="1">aghfp0</item>
        <item name="2">aghfp1</item>
        <item name="3">aghfp2</item>
        <item name="4">aghfp3</item>
        <item name="5">aghfp4</item>
        <item name="6">aghfp5</item>
    </string-array>
    <string-array name="txvStaName">
        <item name="0">R:</item>
        <item name="1">R:</item>
        <item name="2">B:</item>
        <item name="3">L:</item>
        <item name="4">C:</item>
        <item name="5">P:</item>
    </string-array>
    <string-array name="txvMessageName">
        <item name="0">Alias Name:</item>
        <item name="1">Local name:</item>
        <item name="2">AG Local name:</item>
        <item name="3">Ver:</item>
        <item name="4">AG Ver:</item>
        <item name="5">BDA: </item>
        <item name="6">Pair BDA: </item>
    </string-array>
</resources>
