<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentAudioParaSetA7">


    <TextView
        android:id="@+id/txvAudioParaSetTitleA7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txvAudioParaTitleA7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rdGpDevAudioParaA7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rectangle"
        android:checkedButton="@id/rdAllAudioParaA7"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAudioParaSetTitleA7">

        <RadioButton
            android:id="@+id/rdA6AudioParaA7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvDevA6"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/rdA7AudioParaA7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txvDevA7" />

        <RadioButton
            android:id="@+id/rdAllAudioParaA7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txvDevAllHfp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rdGpModeAudioParaA7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rectangle"
        android:checkedButton="@id/rdModeVcsAudioParaA7"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/rdGpDevAudioParaA7"
        app:layout_constraintTop_toBottomOf="@+id/rdGpDevAudioParaA7">

        <RadioButton
            android:id="@+id/rdModeWireAudioParaA7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvModeWired" />

        <RadioButton
            android:id="@+id/rdModeUsbAudioParaA7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvModeUsb" />

        <RadioButton
            android:id="@+id/rdModeBtAudioParaA7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txvModeBt" />

        <RadioButton
            android:id="@+id/rdModeVcsAudioParaA7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txvModeVcs" />
    </RadioGroup>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/btnAudioParaWriteA7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdGpModeAudioParaA7"
        app:layout_constraintVertical_bias="0.537">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rdGpParaAudioPara"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rdAudioPara0A7"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <RadioButton
                    android:id="@+id/rdAudioPara0A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter0A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara1A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter1A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara2A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter2A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara3A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter3A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara4A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter4A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara5A7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter5A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara6A7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter6A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara7A7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter7A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara8A7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter8A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara9A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter9A7"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioButton
                    android:id="@+id/rdAudioPara10A7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter10A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara11A7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter11A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara12A7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter12A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara13A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter13A7"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioButton
                    android:id="@+id/rdAudioPara14A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter14A7" />

                <RadioButton
                    android:id="@+id/rdAudioPara15A7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txvAudioParameter15A7"
                    android:visibility="visible" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAudioParaReadA7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btnRead"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAudioParaWriteA7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btnWrite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>